--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,3 +20,15 @@ h1, h2, h3, h4, h5, h6 {
 p, div {
     font-family: 'Ubuntu', sans-serif;
 }
+
+.style_image{
+	border-radius: 10px;
+	width: 140px;
+	height: 140px;
+}
+
+div.center {
+  margin-left: auto;
+  margin-right: auto;
+  width: 8em;
+}
