home desde cero

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,103 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-    <title>Jumbotron Template for Bootstrap</title>
-    <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-            <a class="navbar-brand" href="#">Inicio</a>
-        </div>
-        
-        <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </div>
-
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Smarket Jumbotron</h1>
-        <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quod deserunt modi ab voluptatibus explicabo nesciunt error voluptates accusamus quos qui inventore molestias! Odio, architecto, ipsum delectus qui voluptates eveniet.</p></br>
-        <p><a class="btn btn-primary btn-lg" role="button">Boton test &raquo;</a></p>
-      </div>
-    </div>
-
-    <div class="container marketing">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="center">
-            <%= image_tag("smarket.png", :class => "style_image") %>
-            <h2>Paso 1</h2>
-          </div>
-          <p>La idea es poner lo primero que debes hacer para comprar algo :B. El botón talves está demas</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        
-        <div class="col-lg-4">
-            <div class="center">
-              <%= image_tag("smarket.png", :class => "style_image") %>
-              <h2>Paso 2</h2>
-            </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, ad, consequatur, animi eligendi tenetur ex itaque eaque quis quod quasi cum totam voluptate ipsum atque odio molestias nesciunt libero ab.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        
-        <div class="col-lg-4">
-          <div class="center">
-            <%= image_tag("smarket.png", :class => "style_image") %>
-            <h2>Paso 3</h2>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, ullam, reprehenderit, fuga soluta veniam eaque assumenda eligendi libero neque molestiae beatae cum natus in magnam tempore excepturi nulla ipsam laudantium.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-    </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/docs.min.js"></script>
-  </body>
-</html>
+<h1>Hola soy el home</h1>
