--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,9 +15,28 @@
  */
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Ubuntu', sans-serif;
+font-family: 'Arimo', sans-serif;
 }
 p, div {
-    font-family: 'Ubuntu', sans-serif;
+font-family: 'Arimo', sans-serif;
 }
 
+@media (min-width: 767px){
+	body{
+		padding-top: 60px;
+	}
+}
+
+a.btn{
+	color: #FFF;
+}
+
+a.btn:visited {
+	color: #FFF;
+}
+
+div.navbar div.container a{
+	color: #848484;
+}
+
+.
