Se agrega panel central, links aun no  funcionando

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Smarket home view</h1>
+<div class="jumbotron">
+	<h1>¿Qué es SMARKET?</h1><br>
+	<p>Smarket es un sitio en el cúal podrás vender tus productos, publicar tus necesidades y realizar subastas. Te invitamos a formar parte de nuestra comunidad y comenzar hoy mismo a vender y comprar productos de manera fácil y segura.
+	</p>
+    <p>
+    	<a href="#" class="btn btn-primary btn-lg" role="button">Aprende cómo &raquo;</a>
+    </p>
+</div>
+
