--- a/app/views/producto_necesitados/index.html.erb
+++ b/app/views/producto_necesitados/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing producto_necesitados</h1>
-
-<table>
+<div class="panel panel-success">
+  <div class="panel-heading">Necesidades</div>
+  <table class="table">
   <thead>
     <tr>
       <th>Producto</th>
@@ -29,6 +29,8 @@
     <% end %>
   </tbody>
 </table>
+</div>
+</div>
 
 <br>
 
