--- a/app/views/producto_ofertados/_form.html.erb
+++ b/app/views/producto_ofertados/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :producto_of_fecha_publicacion %><br>
     <%= f.date_select :producto_of_fecha_publicacion %>
   </div>
+  <div class="field">
+    <%= f.label :producto_of_picture %><br>
+    <%= f.file_field :producto_of_picture %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
