--- a/app/views/producto_ofertados/index.html.erb
+++ b/app/views/producto_ofertados/index.html.erb
@@ -1,14 +1,13 @@
-<h1>Listing producto_ofertados</h1>
-
-<table>
+<div class="panel panel-success">
+  <div class="panel-heading">Ofertas</div>
+  <table class="table">
   <thead>
     <tr>
       <th>Producto</th>
-      <th>Producto of</th>
-      <th>Usuario</th>
-      <th>Producto of cantidad</th>
-      <th>Producto of precio unitario</th>
-      <th>Producto of fecha publicacion</th>
+      <th>Vendedor</th>
+      <th>Cantidad</th>
+      <th>Precio unitario</th>
+      <th>Fecha</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,8 +15,7 @@
   <tbody>
     <% @producto_ofertados.each do |producto_ofertado| %>
       <tr>
-        <td><%= producto_ofertado.producto %></td>
-        <td><%= producto_ofertado.producto_of %></td>
+        <td><%= producto_ofertado.picture %></td>
         <td><%= producto_ofertado.usuario %></td>
         <td><%= producto_ofertado.producto_of_cantidad %></td>
         <td><%= producto_ofertado.producto_of_precio_unitario %></td>
@@ -29,7 +27,8 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
+</div>
 <br>
 
 <%= link_to 'New Producto ofertado', new_producto_ofertado_path %>
