--- a/app/views/remates/index.html.erb
+++ b/app/views/remates/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing remates</h1>
-
-<table>
+<div class="panel panel-success">
+  <div class="panel-heading">Remates</div>
+  <table class="table">
   <thead>
     <tr>
       <th>Sub</th>
@@ -31,6 +31,8 @@
     <% end %>
   </tbody>
 </table>
+</div>
+</div>
 
 <br>
 
